data/derived/comb/progs/unify/prog4369.ml.out
Characters 85-86:
  | h::t -> f 0 h
              ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
